@@ -97,10 +97,10 @@ Global / concurrentRestrictions := {
     val cores       = java.lang.Runtime.getRuntime.availableProcessors()
     val isCI        = sys.env.contains("CI")
     val testLimit   = 1 max (if (isCI) cores / 2 else math.ceil(cores * 0.8).toInt)
-    // Forked-test cap: how many forked test JVMs run concurrently. On CI we hard-cap at 2 so kyo-pod
-    // (which splits each suite into a podman fork and a docker fork via KYO_POD_RUNTIME pinning) ends
-    // up with at most one fork per daemon — strictly bounding container-daemon contention. Locally
-    // we allow up to half the cores for fast iteration; some same-daemon overlap is tolerable.
+    // Forked-test cap: how many forked test JVMs run concurrently. kyo-pod splits each suite into a
+    // podman fork and a docker fork (KYO_POD_RUNTIME pinning), so this bounds container-daemon
+    // contention. It is a numeric, daemon-blind cap (it does NOT guarantee one fork per daemon); real
+    // CI additionally serializes via SBT_TASK_LIMIT=1 (limitAll below). CI caps at 2; locally cores/2.
     val forkLimit = if (isCI) 2 else 1 max cores / 2
     Seq(
         Tags.limitAll(if (taskLimit != "0") taskLimit.toInt else cores),
@@ -203,13 +203,22 @@ lazy val `kyo-settings` = Seq(
     Test / testOptions += Tests.Argument(TestFrameworks.ScalaTest, "-oDG"),
     ThisBuild / versionScheme := Some("early-semver"),
     Test / javaOptions += "--add-opens=java.base/java.lang=ALL-UNNAMED",
+    // The process-lifetime default HttpClient is never closed, so its pool relies on the idle-expiry reaper to release
+    // sockets. Its 60s production idle timeout outlasts the leak check's 30s fd-drain window, so a connection pooled just
+    // before a fork ends would still be open at the check. Shorten it in the test fork only (production keeps 60s) so a
+    // reaped default-client connection drains well within the window. See kyo.http.client.defaultIdleTimeout.
+    Test / javaOptions += "-Dkyo.http.client.defaultIdleTimeout=2seconds",
     // Exclude generated FFI binding impls (src_managed *BindingsImpl from the kyo-ffi codegen): measuring
     // them tracks the generator, not hand-written code.
     coverageExcludedFiles := ".*src_managed.*",
-    // Compact object headers (JEP 519, a product flag in JDK 25 which the build requires) shrink the
-    // per-object header from 12-16 to 8 bytes. The test forks allocate heavily (kyo-tasty decodes 80k
-    // symbols), so this cuts heap pressure where the forks run closest to their cap.
-    Test / javaOptions += "-XX:+UseCompactObjectHeaders",
+    // Compact object headers (JEP 519) are buggy on JDK 25 under the forked test workload: heavy fiber
+    // concurrency + pervasive arraycopy (Chunk/Span) + G1GC hit JDK-8380060 and a G1 concurrent-mark
+    // metadata corruption, surfacing as a rare ClassNotFoundError for a class present on disk (the
+    // io_uring test flake). Force COH OFF in the forks explicitly so it stays off regardless of the
+    // driver's opts. The DRIVER JVM keeps COH ON (.jvmopts / CI JAVA_OPTS): it runs no forked-test
+    // workload, only compile and the Scala.js/Wasm linker, whose large graph needs COH's header
+    // savings to fit the 12 GB driver heap (without it the kyo-ui Wasm linker GC-thrashes to a hang).
+    Test / javaOptions += "-XX:-UseCompactObjectHeaders",
     // Forked test JVMs otherwise inherit no -Xmx and fall back to 25% of RAM (4GB on the 16GB CI
     // runners), too little for the heavy classpath-loading suites (kyo-tasty loads 80k-symbol
     // classpaths under globalK-way leaf concurrency). Pin an explicit fork heap on CI; with the
@@ -336,6 +345,7 @@ lazy val kyoJVM: Project = project
         `kyo-prelude`.jvm,
         `kyo-parse`.jvm,
         `kyo-core`.jvm,
+        `kyo-system`.jvm,
         `kyo-offheap`.jvm,
         `kyo-ffi`.jvm,
         `kyo-ffi-codegen`,
@@ -362,6 +372,10 @@ lazy val kyoJVM: Project = project
         `kyo-schema-ion`.jvm,
         `kyo-schema-yaml`.jvm,
         `kyo-schema-tests`.jvm,
+        `kyo-sql`.jvm,
+        `kyo-sql-postgres`.jvm,
+        `kyo-sql-mysql`.jvm,
+        `kyo-sql-tests`.jvm,
         `kyo-http`.jvm,
         `kyo-flow`.jvm,
         `kyo-ai`.jvm,
@@ -417,6 +431,7 @@ lazy val kyoJS = project
         `kyo-prelude`.js,
         `kyo-parse`.js,
         `kyo-core`.js,
+        `kyo-system`.js,
         `kyo-ffi`.js,
         `kyo-ffi-it`.js,
         `kyo-net`.js,
@@ -442,6 +457,10 @@ lazy val kyoJS = project
         `kyo-schema-ion`.js,
         `kyo-schema-yaml`.js,
         `kyo-schema-tests`.js,
+        `kyo-sql`.js,
+        `kyo-sql-postgres`.js,
+        `kyo-sql-mysql`.js,
+        `kyo-sql-tests`.js,
         `kyo-http`.js,
         `kyo-aeron`.js,
         `kyo-flow`.js,
@@ -485,6 +504,7 @@ lazy val kyoNative = project
         `kyo-config`.native,
         `kyo-scheduler`.native,
         `kyo-core`.native,
+        `kyo-system`.native,
         `kyo-offheap`.native,
         `kyo-ffi`.native,
         `kyo-ffi-it`.native,
@@ -504,6 +524,10 @@ lazy val kyoNative = project
         `kyo-schema-ion`.native,
         `kyo-schema-yaml`.native,
         `kyo-schema-tests`.native,
+        `kyo-sql`.native,
+        `kyo-sql-postgres`.native,
+        `kyo-sql-mysql`.native,
+        `kyo-sql-tests`.native,
         `kyo-http`.native,
         `kyo-aeron`.native,
         `kyo-flow`.native,
@@ -558,8 +582,13 @@ lazy val kyoWasm = project
         `kyo-schema-ion`.wasm,
         `kyo-schema-yaml`.wasm,
         `kyo-schema-tests`.wasm,
+        `kyo-sql`.wasm,
+        `kyo-sql-postgres`.wasm,
+        `kyo-sql-mysql`.wasm,
+        `kyo-sql-tests`.wasm,
         `kyo-scheduler`.wasm,
         `kyo-core`.wasm,
+        `kyo-system`.wasm,
         `kyo-ffi`.wasm,
         `kyo-direct`.wasm,
         `kyo-stm`.wasm,
@@ -880,7 +909,7 @@ lazy val `kyo-schema-json` =
     crossProject(JSPlatform, JVMPlatform, NativePlatform, WasmPlatform)
         .crossType(CrossType.Full)
         .dependsOn(`kyo-schema` % "test->test;compile->compile")
-        .dependsOn(`kyo-core` % "test->compile")
+        .dependsOn(`kyo-system`)
         .in(file("kyo-schema-json"))
         .withKyoTest
         .settings(`kyo-settings`)
@@ -963,6 +992,7 @@ lazy val `kyo-schema-ion` =
         .crossType(CrossType.Full)
         .dependsOn(`kyo-schema` % "test->test;compile->compile")
         .dependsOn(`kyo-core` % "test->compile")
+        .dependsOn(`kyo-system` % "test->compile")
         .in(file("kyo-schema-ion"))
         .withKyoTest
         .settings(`kyo-settings`)
@@ -982,6 +1012,111 @@ lazy val `kyo-schema-yaml` =
         .jvmSettings(mimaCheck(false))
         .nativeSettings(`native-settings`)
         .jsSettings(`js-settings`, Test / scalaJSLinkerConfig ~= (_.withModuleKind(ModuleKind.CommonJSModule)))
+        .wasmSettings(`wasm-settings`)
+
+lazy val `kyo-sql` =
+    // Backend-agnostic core: the Postgres and MySQL wire drivers below depend on this module and are never
+    // depended on by it, so nothing here may name a type either declares. Compiling this module with no backend
+    // on the classpath is the gate for that (a same-package name is invisible to a grep).
+    crossProject(JSPlatform, JVMPlatform, NativePlatform, WasmPlatform)
+        .crossType(CrossType.Full)
+        .dependsOn(`kyo-core`)
+        // kyo-schema-json (not kyo-schema): SqlSchema is a self-contained codec typeclass; kyo-schema enters
+        // only at the JSON tier, for Sql.jsonColumn's Schema-based overload.
+        .dependsOn(`kyo-schema-json`)
+        .dependsOn(`kyo-net`)
+        .dependsOn(`kyo-pod` % "test->compile")
+        .dependsOn(`kyo-system` % "test->compile")
+        .in(file("kyo-sql"))
+        .withKyoTest
+        .settings(`kyo-settings`)
+        .jvmSettings(mimaCheck(false))
+        // CommonJS: the test path reaches Node builtins (kyo.Path -> node:fs, kyo-pod -> node:child_process,
+        // kyo-core entropy -> node:crypto); without it fastLinkJS fails to link them.
+        .jsSettings(
+            `js-settings`,
+            scalaJSLinkerConfig ~= { _.withModuleKind(ModuleKind.CommonJSModule) }
+        )
+        // openssl-native-settings: kyo-net's Native C shims reference TLS symbols (TLS_client_method,
+        // X509_free, ...), so a Native binary that reaches them must link libssl/libcrypto or nativeLink fails.
+        .nativeSettings(`native-settings`, `openssl-native-settings`)
+        .wasmSettings(`wasm-settings`)
+
+// The two backend modules below are deliberately symmetric (same platforms, edges, settings); a difference is
+// a bug unless it names a wire feature only one engine has. Both take `test->test` on `kyo-sql` (not just
+// `compile->compile`) to reuse its test fixtures (`Test`, `FakeServer`, `OwnContainer`, `StubConnection`, the
+// mocks) rather than duplicate them. Other edges (`kyo-core`, `kyo-net`, `kyo-schema-json`) arrive transitively;
+// `kyo-pod` is redeclared because `kyo-sql` takes it test-scope only and that does not propagate.
+lazy val `kyo-sql-postgres` =
+    crossProject(JSPlatform, JVMPlatform, NativePlatform, WasmPlatform)
+        .crossType(CrossType.Full)
+        .dependsOn(`kyo-sql` % "test->test;compile->compile")
+        .dependsOn(`kyo-pod` % "test->compile")
+        .dependsOn(`kyo-system` % "test->compile")
+        .in(file("kyo-sql-postgres"))
+        .withKyoTest
+        .settings(`kyo-settings`)
+        .jvmSettings(mimaCheck(false))
+        // CommonJS, same as kyo-sql: the test path reaches Node builtins (kyo-pod's harness, kyo-core entropy).
+        .jsSettings(
+            `js-settings`,
+            scalaJSLinkerConfig ~= { _.withModuleKind(ModuleKind.CommonJSModule) }
+        )
+        // openssl-native-settings: this module's auth/TLS sources reach kyo-net's Native C shims, so a test
+        // binary that touches them must link libssl/libcrypto or nativeLink fails.
+        .nativeSettings(`native-settings`, `openssl-native-settings`)
+        .wasmSettings(`wasm-settings`)
+
+lazy val `kyo-sql-mysql` =
+    crossProject(JSPlatform, JVMPlatform, NativePlatform, WasmPlatform)
+        .crossType(CrossType.Full)
+        .dependsOn(`kyo-sql` % "test->test;compile->compile")
+        .dependsOn(`kyo-pod` % "test->compile")
+        .dependsOn(`kyo-system` % "test->compile")
+        .in(file("kyo-sql-mysql"))
+        .withKyoTest
+        .settings(`kyo-settings`)
+        .jvmSettings(mimaCheck(false))
+        .jsSettings(
+            `js-settings`,
+            scalaJSLinkerConfig ~= { _.withModuleKind(ModuleKind.CommonJSModule) }
+        )
+        .nativeSettings(`native-settings`, `openssl-native-settings`)
+        .wasmSettings(`wasm-settings`)
+
+// Unpublished; it holds the suites whose SUBJECT spans both engines and so have no single-module home: the
+// cross-backend suites that name both clients/factories to prove they behave the same through one abstract
+// surface, and the container-driven suites sharing `internal/SqlSharedContainers`. That fixture connects to
+// both engines directly, so it can live neither in core (which must compile with no backend) nor in one engine
+// module (the other's suites could not see it). `test->test` on all three lets the suites reuse core's `Test`
+// base and mocks plus each engine's fixtures; `publish / skip` keeps the shipped artifact count at three.
+lazy val `kyo-sql-tests` =
+    crossProject(JSPlatform, JVMPlatform, NativePlatform, WasmPlatform)
+        .crossType(CrossType.Full)
+        .dependsOn(`kyo-sql` % "test->test;compile->compile")
+        .dependsOn(`kyo-sql-postgres` % "test->test;compile->compile")
+        .dependsOn(`kyo-sql-mysql` % "test->test;compile->compile")
+        .dependsOn(`kyo-pod` % "test->compile")
+        .in(file("kyo-sql-tests"))
+        .withKyoTest
+        .settings(`kyo-settings`, publish / skip := true)
+        .jvmSettings(mimaCheck(false))
+        // No README, so nothing to validate. Left unset the plugin would look for one that does not exist.
+        .jvmConfigure(_.settings(doctestSources := Seq.empty))
+        .jsSettings(
+            `js-settings`,
+            scalaJSLinkerConfig ~= { _.withModuleKind(ModuleKind.CommonJSModule) }
+        )
+        .nativeSettings(
+            `native-settings`,
+            `openssl-native-settings`,
+            // Scala Native resolves ServiceLoader at LINK time, so a META-INF/services provider works only when
+            // also enlisted here; without this, runtime backend discovery finds nothing on Native.
+            Test / nativeConfig ~= (_.withServiceProviders(Map("kyo.db.Backend" -> Seq(
+                "kyo.internal.postgres.PostgresBackendFactory",
+                "kyo.internal.mysql.MysqlBackendFactory"
+            ))))
+        )
         .wasmSettings(`wasm-settings`)
 
 lazy val `kyo-core` =
@@ -1007,6 +1142,18 @@ lazy val `kyo-core` =
             libraryDependencies += ("org.scala-js" %%% "scalajs-java-logging" % "1.0.0").cross(CrossVersion.for3Use2_13)
         )
 
+lazy val `kyo-system` =
+    crossProject(JSPlatform, JVMPlatform, NativePlatform, WasmPlatform)
+        .crossType(CrossType.Full)
+        .in(file("kyo-system"))
+        .dependsOn(`kyo-core`)
+        .withKyoTest
+        .settings(`kyo-settings`)
+        .jvmSettings(mimaCheck(false))
+        .nativeSettings(`native-settings`)
+        .jsSettings(`js-settings`, scalaJSLinkerConfig ~= { _.withModuleKind(ModuleKind.CommonJSModule) })
+        .wasmSettings(`wasm-settings`)
+
 lazy val `kyo-offheap` =
     crossProject(JVMPlatform, NativePlatform)
         .crossType(CrossType.Full)
@@ -1028,6 +1175,7 @@ lazy val `kyo-ffi` =
         .crossType(CrossType.Full)
         .in(file("kyo-ffi"))
         .dependsOn(`kyo-core`)
+        .dependsOn(`kyo-system` % Test)
         .withKyoTest
         .settings(`kyo-settings`)
         .jvmSettings(
@@ -1068,6 +1216,7 @@ lazy val `kyo-ffi-it` =
         .in(file("kyo-ffi/it"))
         .enablePlugins(KyoFfiPlugin)
         .dependsOn(`kyo-ffi`)
+        .dependsOn(`kyo-system` % Test)
         .withKyoTest
         .settings(
             `kyo-settings`,
@@ -1304,6 +1453,7 @@ lazy val `kyo-actor` =
         .crossType(CrossType.Full)
         .in(file("kyo-actor"))
         .dependsOn(`kyo-core`)
+        .dependsOn(`kyo-system`)
         .withKyoTest
         .settings(`kyo-settings`)
         .jvmSettings(mimaCheck(false))
@@ -1316,6 +1466,7 @@ lazy val `kyo-tasty` =
         .crossType(CrossType.Full)
         .in(file("kyo-tasty"))
         .dependsOn(`kyo-core`, `kyo-schema`)
+        .dependsOn(`kyo-system`)
         .dependsOn(`kyo-schema-json` % "test->compile")
         .withKyoTest
         .settings(
@@ -1451,6 +1602,7 @@ lazy val `kyo-stats-machine` =
         .in(file("kyo-stats-machine"))
         .enablePlugins(KyoFfiPlugin)
         .dependsOn(`kyo-ffi`)
+        .dependsOn(`kyo-system`)
         .withKyoTest
         .settings(
             `kyo-settings`,
@@ -1779,6 +1931,7 @@ lazy val `kyo-net` =
         .crossType(CrossType.Full)
         .enablePlugins(KyoFfiPlugin)
         .dependsOn(`kyo-core`, `kyo-config`)
+        .dependsOn(`kyo-system`)
         .dependsOn(`kyo-ffi`)
         .in(file("kyo-net"))
         .withKyoTest
@@ -2010,6 +2163,7 @@ lazy val `kyo-aeron` =
         .enablePlugins(KyoFfiPlugin)
         .in(file("kyo-aeron"))
         .dependsOn(`kyo-core`)
+        .dependsOn(`kyo-system`)
         .dependsOn(`kyo-ffi`)
         .dependsOn(`kyo-schema`)
         // Schema types the public publish/stream surface; MsgPack encodes the Envelope on the wire and
@@ -2224,6 +2378,7 @@ lazy val `kyo-compiler` =
         .crossType(CrossType.Full)
         .in(file("kyo-compiler"))
         .dependsOn(`kyo-core`, `kyo-aeron`, `kyo-ai` % Test)
+        .dependsOn(`kyo-system`)
         .withKyoTest
         .settings(
             `kyo-settings`,
@@ -2242,7 +2397,8 @@ lazy val `kyo-http` =
         .crossType(CrossType.Full)
         .in(file("kyo-http"))
         .dependsOn(`kyo-core`, `kyo-config`, `kyo-schema-json`)
-        .dependsOn(`kyo-net`)
+        .dependsOn(`kyo-system` % Test)
+        .dependsOn(`kyo-net` % "compile->compile;test->test")
         .withKyoTest
         .settings(
             `kyo-settings`
@@ -2282,6 +2438,7 @@ lazy val `kyo-ai` =
         .crossType(CrossType.Full)
         .in(file("kyo-ai"))
         .dependsOn(`kyo-core`, `kyo-schema-json`, `kyo-http`, `kyo-actor`, `kyo-jsonrpc`, `kyo-jsonrpc-http`, `kyo-mcp`)
+        .dependsOn(`kyo-system`)
         .withKyoTest
         .settings(`kyo-settings`)
         .jvmSettings(mimaCheck(false))
@@ -2318,6 +2475,7 @@ lazy val `kyo-jsonrpc` =
         .dependsOn(`kyo-core`)
         .dependsOn(`kyo-schema-json`)
         .dependsOn(`kyo-net`)
+        .dependsOn(`kyo-system`)
         .in(file("kyo-jsonrpc"))
         .withKyoTest
         .settings(`kyo-settings`)
@@ -2352,6 +2510,7 @@ lazy val `kyo-mcp` =
         .in(file("kyo-mcp"))
         .withKyoTest
         .dependsOn(`kyo-jsonrpc`)
+        .dependsOn(`kyo-system` % Test)
         .settings(`kyo-settings`)
         .jvmSettings(mimaCheck(false))
         // Test-only dep so the JVM demo MCP servers (jvm/src/test/scala/demo) can drive
@@ -2652,6 +2811,7 @@ lazy val `kyo-pod` =
         .crossType(CrossType.Full)
         .in(file("kyo-pod"))
         .dependsOn(`kyo-core`, `kyo-http`)
+        .dependsOn(`kyo-system`)
         .withKyoTest
         .settings(
             `kyo-settings`
@@ -2690,9 +2850,13 @@ lazy val `kyo-pod` =
                     // (single-fork, no marker) are deliberately not matched (the trailing `s` distinguishes them).
                     val simpleName = test.name.split('.').last
                     val srcOpt     = testSrcDirs.flatMap(d => (d ** s"$simpleName.scala").get).headOption
+                    // Match actual CALLS to the marker-registering helpers (helper name immediately followed by `{` or `(`),
+                    // not mere textual mentions. A suite's scaladoc can reference `runBackends` (ContainerOrchestrationItTest
+                    // points readers at ContainerItTest) while the suite itself only uses the single-fork `runBackend`; a plain
+                    // `contains` check then forks that http-only suite per runtime and runs it twice against one daemon.
+                    val runtimeHelperCall = """\b(runBackendsLong|runBackends|runRuntimes)\s*[{(]""".r
                     val usesRuntimeMarkers = srcOpt.exists { f =>
-                        val src = IO.read(f)
-                        src.contains("runBackends") || src.contains("runRuntimes")
+                        runtimeHelperCall.findFirstIn(IO.read(f)).isDefined
                     }
                     val targetRuntimes = if (usesRuntimeMarkers) Seq("podman", "docker") else Seq.empty
                     if (targetRuntimes.isEmpty)
@@ -2754,6 +2918,7 @@ lazy val `kyo-browser` =
         .crossType(CrossType.Full)
         .in(file("kyo-browser"))
         .dependsOn(`kyo-http`, `kyo-jsonrpc`, `kyo-jsonrpc-http`)
+        .dependsOn(`kyo-system`)
         .withKyoTest
         .settings(
             `kyo-settings`
@@ -2822,6 +2987,7 @@ lazy val `kyo-slack` =
         .crossType(CrossType.Full)
         .in(file("kyo-slack"))
         .dependsOn(`kyo-http`, `kyo-schema-json`)
+        .dependsOn(`kyo-system` % Test)
         .withKyoTest
         .settings(
             `kyo-settings`
@@ -2862,6 +3028,7 @@ lazy val `kyo-i18n` =
         .crossType(CrossType.Full)
         .in(file("kyo-i18n"))
         .dependsOn(`kyo-core`)
+        .dependsOn(`kyo-system`)
         .withKyoTest
         .settings(`kyo-settings`)
         .jvmSettings(mimaCheck(false))
@@ -2875,6 +3042,7 @@ lazy val `kyo-ui` =
         .in(file("kyo-ui"))
         .dependsOn(`kyo-core`, `kyo-http`)
         .dependsOn(`kyo-browser` % Test)
+        .dependsOn(`kyo-system` % Test)
         .withKyoTest
         .settings(
             `kyo-settings`
@@ -2935,6 +3103,7 @@ lazy val `kyo-website` =
         .in(file("kyo-website"))
         .dependsOn(`kyo-ui`)
         .dependsOn(`kyo-parse`)
+        .dependsOn(`kyo-system`)
         .withKyoTest
         .settings(`kyo-settings`)
         .settings(publish / skip := true)
@@ -2980,6 +3149,7 @@ lazy val `kyo-examples` =
         .crossType(CrossType.Full)
         .in(file("kyo-examples"))
         .dependsOn(`kyo-http`)
+        .dependsOn(`kyo-system`)
         .dependsOn(`kyo-schema-json`)
         .dependsOn(`kyo-direct`)
         .dependsOn(`kyo-core`)
@@ -3076,6 +3246,7 @@ lazy val `kyo-doctest` =
         .crossType(CrossType.Full)
         .in(file("kyo-doctest"))
         .dependsOn(`kyo-core`)
+        .dependsOn(`kyo-system`)
         .dependsOn(`kyo-schema-json`)
         .dependsOn(`kyo-parse`)
         .dependsOn(`kyo-direct` % Test)
@@ -3169,10 +3340,14 @@ lazy val `native-settings-base` = Seq(
     Test / testForkedParallel                         := false,
     Test / envVars += "SCALANATIVE_THREAD_STACK_SIZE" -> "33554432",
     libraryDependencies += "io.github.cquiroz"       %%% "scala-java-time" % "2.7.0",
-    // A dependency's nativeBundled FFI C (kyo-net's kyo_uring.c and TLS shims) is compiled into THIS Native binary
-    // (Scala Native scans every scala-native dir on the classpath), but nativeConfig does not propagate across a
-    // project dependency; so fold each dependency's plugin-written FFI compile/link flags off the classpath, else the
-    // link fails (SSL_CTX_ctrl macro / undefined io_uring_*). A module owning its FFI flags wires them directly.
+    // Off-JVM these java.time/java.util types exist but carry no data (named zones, locales, currencies), so
+    // resolving one throws at run time, invisible to compile and link. These data artifacts supply the data.
+    libraryDependencies += "io.github.cquiroz" %%% "scala-java-time-tzdb"       % "2.7.0",
+    libraryDependencies += "io.github.cquiroz" %%% "scala-java-locales"         % "1.5.4",
+    libraryDependencies += "io.github.cquiroz" %%% "locales-full-currencies-db" % "1.5.4",
+    // A dependency's bundled FFI C (kyo-net's kyo_uring.c and TLS shims) compiles into THIS Native binary, but
+    // nativeConfig does not propagate across a project dependency, so fold each dep's FFI compile/link flags in
+    // here or the link fails (SSL_CTX_ctrl macro / undefined io_uring_*).
     nativeConfig := {
         val base         = nativeConfig.value
         val cp           = (Compile / dependencyClasspath).value
@@ -3218,6 +3393,11 @@ lazy val `js-settings` = Seq(
     Test / parallelExecution                    := false,
     jsEnv                                       := new NodeJSEnv(NodeJSEnv.Config().withArgs(List("--max_old_space_size=5120"))),
     libraryDependencies += "io.github.cquiroz" %%% "scala-java-time" % "2.7.0",
+    // Off-JVM these java.time/java.util types exist but carry no data (named zones, locales, currencies), so
+    // resolving one throws at run time, invisible to compile and link. These data artifacts supply the data.
+    libraryDependencies += "io.github.cquiroz" %%% "scala-java-time-tzdb"       % "2.7.0",
+    libraryDependencies += "io.github.cquiroz" %%% "scala-java-locales"         % "1.5.4",
+    libraryDependencies += "io.github.cquiroz" %%% "locales-full-currencies-db" % "1.5.4",
     // CI links every module's test binary in one sbt process; retaining each module's incremental
     // linker state overflows the 12G sbt heap now that the schema family links per-format
     // binaries. Batch mode drops that state after each link: incremental relink speed is
@@ -3246,6 +3426,11 @@ lazy val `wasm-settings` = Seq(
         ))
     ),
     libraryDependencies += "io.github.cquiroz" %%% "scala-java-time" % "2.7.0",
+    // Off-JVM these java.time/java.util types exist but carry no data (named zones, locales, currencies), so
+    // resolving one throws at run time, invisible to compile and link. These data artifacts supply the data.
+    libraryDependencies += "io.github.cquiroz" %%% "scala-java-time-tzdb"       % "2.7.0",
+    libraryDependencies += "io.github.cquiroz" %%% "scala-java-locales"         % "1.5.4",
+    libraryDependencies += "io.github.cquiroz" %%% "locales-full-currencies-db" % "1.5.4",
     // Same CI heap rationale as `js-settings`: the WASM rows are Scala.js links too.
     scalaJSLinkerConfig := {
         val c = scalaJSLinkerConfig.value
@@ -3309,7 +3494,16 @@ lazy val `kyo-doctest-plugin` = (project in file("kyo-doctest/plugin"))
         },
         // Run the scripted suite as part of the plugin's regular test task so CI gates it via
         // `kyo-doctest-plugin/test` rather than a bespoke scripted invocation.
-        Test / test := (Test / test).dependsOn(scripted.toTask("")).value
+        Test / test := (Test / test).dependsOn(Def.taskDyn {
+            // Skipped on Windows: sbt's scripted framework boots a nested sbt whose Win32 named-pipe
+            // boot-server lock flakily fails to create (error 1336), failing the batch reload before
+            // any test runs (sbt/sbt#6777). This plugin's behavior is platform-independent and is
+            // fully exercised on Linux/macOS.
+            if (sys.props.getOrElse("os.name", "").toLowerCase.contains("win"))
+                Def.task(streams.value.log.info("scripted skipped on Windows (sbt#6777 boot-server named-pipe flake)"))
+            else
+                Def.task((scripted.toTask("")).value)
+        }).value
     )
 
 // --- kyo-compat-plugin (in-tree sbt plugin; published as artifact `kyo-compat-plugin`)
@@ -3352,7 +3546,47 @@ lazy val `kyo-compat-plugin` = (project in file("kyo-compat/plugin"))
         scriptedBufferLog := false,
         // Run the scripted suite as part of the plugin's regular test task (matches
         // kyo-doctest-plugin) so the testKyo 2.12 pass gates it; no bespoke CI step.
-        Test / test := (Test / test).dependsOn(scripted.toTask("")).value
+        Test / test := (Test / test).dependsOn(Def.taskDyn {
+            // Skipped on Windows: sbt's scripted framework boots a nested sbt whose Win32 named-pipe
+            // boot-server lock flakily fails to create (error 1336), failing the batch reload before
+            // any test runs (sbt/sbt#6777). This plugin's behavior is platform-independent and is
+            // fully exercised on Linux/macOS.
+            if (sys.props.getOrElse("os.name", "").toLowerCase.contains("win"))
+                Def.task(streams.value.log.info("scripted skipped on Windows (sbt#6777 boot-server named-pipe flake)"))
+            else
+                Def.task((scripted.toTask("")).value)
+        }).value,
+        // Bundle the cross-binding conformance suite (kyo-compat/test + test-streams)
+        // into the plugin jar as resources, plus an INDEX, so an external binding can
+        // pull it in via `.compatConformance`. Copied verbatim from the canonical suite
+        // the in-repo bindings compile against, so the bundle stays byte-identical.
+        Compile / resourceGenerators += Def.task {
+            val outDir  = (Compile / resourceManaged).value / "kyo-compat-testkit"
+            val suites  = Seq("test" -> "test", "test-streams" -> "streams")
+            val buckets = Seq("shared", "jvm", "js", "native")
+            val base    = (ThisBuild / baseDirectory).value / "kyo-compat"
+            IO.delete(outDir)
+            val index     = scala.collection.mutable.ArrayBuffer.empty[String]
+            val generated = scala.collection.mutable.ArrayBuffer.empty[File]
+            for {
+                (suiteDir, suiteTag) <- suites
+                bucket               <- buckets
+                root = base / suiteDir / bucket / "src" / "test" / "scala"
+                if root.exists
+                src <- (root ** "*.scala").get
+            } {
+                val rel   = root.toPath.relativize(src.toPath).toString.replace('\\', '/')
+                val scope = s"$suiteTag-$bucket"
+                val dest  = outDir / scope / rel
+                IO.copyFile(src, dest)
+                index += s"$scope\t$rel"
+                generated += dest
+            }
+            val indexFile = outDir / "INDEX"
+            IO.write(indexFile, index.sorted.mkString("\n") + "\n")
+            generated += indexFile
+            generated.toSeq
+        }.taskValue
     )
 
 // ===========================================================================
